// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     for a total of 
    $1.99
  </h1>
</div>
`;

exports[`should render correctly with several expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     for a total of 
    $1,222.99
  </h1>
</div>
`;
